# raindrip

./: .gitignore  CHANGELOG.md  LICENSE  README.md  digest.txt  playtest.py  pyproject.toml
.github/workflows/: release.yml  test.yml
src/raindrip/: api.py  config.py  main.py  models.py
tests/: test_api.py  test_batch_operations.py  test_cli.py  test_collection_management.py  test_edge_cases.py  test_hierarchy_and_icons.py  test_tag_management.py
