[project]
name = "raindrip"
version = "0.1.0"
description = "raindrip: AI-friendly CLI for Raindrop.io"
authors = [
    { name = "rinvii" }
]
keywords = ["raindrop", "cli", "ai-agent", "automation", "bookmarks"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "py-toon-format>=0.1.0",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "typer>=0.21.1",
]

[project.urls]
Homepage = "https://github.com/rinvii/raindrip"
Repository = "https://github.com/rinvii/raindrip"
Issues = "https://github.com/rinvii/raindrip/issues"
Changelog = "https://github.com/rinvii/raindrip/blob/main/CHANGELOG.md"

[project.scripts]
raindrip = "raindrip.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]
